# nono

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  cliff.toml
.github/workflows/: ci.yml
data/profiles/: claude-code-secretive.toml  claude-code.toml
docs/: docs.json  index.md  troubleshooting.md
docs/clients/: claude-code.mdx
docs/development/: testing.mdx
docs/profiles/: built-in.md  index.md
docs/security/: index.md  landlock.md  seatbelt.md  vs-application.md
docs/usage/: examples.md  examples.mdx  flags.md  flags.mdx  index.md  index.mdx  secrets.md
scripts/: test-secrets.sh
src/: capability.rs  cli.rs  diagnostic.rs  error.rs  keystore.rs  main.rs  output.rs  query.rs  sandbox_state.rs  setup.rs
src/config/: mod.rs
src/profile/: builtin.rs  mod.rs
src/sandbox/: linux.rs  macos.rs
