[package]
name = "nono"
version = "0.1.0"
edition = "2021"
authors = ["Luke Hinds"]
description = "The opposite of YOLO - a capability shell for AI agents"
license = "Apache-2.0"
repository = "https://github.com/lukehinds/nono"
keywords = ["sandbox", "security", "capability", "agent", "ai", "sandbox"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
xdg-home = "1.3.0"
dirs = "5"

# Error handling
thiserror = "2"
anyhow = "1"

# Secure credential handling
zeroize = { version = "1", features = ["alloc"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Output styling
colored = "2"
rand = "0.8"

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
nix = { version = "0.29", features = ["process", "signal", "fs"] }
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "fs"] }
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nono"
path = "src/main.rs"
